# ulibgsmmap

./: .gitignore  Makefile.freebsd  Makefile.freebsd.in  Makefile.linux.in  Makefile.osx.in  README.md  aclocal.m4  codesign_environment.sh  configure  configure.in  make_buildnr.sh  make_buildnr.sh.in  make_pkg.sh  ulibgsmmap.pc  ulibgsmmap.pc.in  ulibgsmmap_config.h
.github/: FUNDING.yml
doc/: cancelLocation.asn  updateLocation.asn  ~$002-f10.doc
doc/29002-630-20-SDL/: .sdtfiles  29002-630-20.sdt  29002-630-20.sdt.state  ATM_Stand_Alone_SGSN.spr  ATM_Stand_Alone_VLR.spr  ATM_With_SGSN_HLR.spr  ATM_With_VLR_HLR.spr  Co_CSG_SDM_SGSN.spr  Co_CSG_SDM_VLR.spr  Co_SDM_SGSN.spr  Co_SDM_VLR.spr  Co_Tracing_SGSN.spr  Co_Tracing_VLR.spr  DTM_Stand_Alone_SGSN.spr  DTM_Stand_Alone_VLR.spr  DTM_With_SGSN_HLR.spr  DTM_With_VLR_HLR.spr  Delete_GPRS_Subscriber_Data_HLR.smc  Delete_Subs_Data_SGSN.spr  Delete_Subs_Data_VLR.spr  Delete_Subscriber_CSS.spr  Delete_Subscriber_Data_HLR.smc  Delete_Subscriber_HLR.spr  Delete_VCSG_Subs_Data_CSS.smc  Delete_VCSG_Subs_Data_SGSN.spr  Delete_VCSG_Subs_Data_VLR.spr  Ins_Subs_Data_Stand_Alone_SGSN.spr  Ins_Subs_Data_Stand_Alone_VLR.spr  Ins_VCSG_Subs_Data_Stand_Alone_SGSN.spr  Ins_VCSG_Subs_Data_Stand_Alone_VLR.spr  Modify_Data_CSS.spr  Modify_Data_HLR.spr  Send_IMSI_HLR.spr  Send_IMSI_VLR.spr
doc/29002-630-22-SDL/: .sdtfiles  29002-630-22.sdt  29002-630-22.sdt.state  Activate_SS_HLR.spr  Activate_SS_MSC.spr  Activate_SS_VLR.spr  CC_Coordinator_HLR.spr  Erase_CC_Entry_HLR.spr  Erase_CC_Entry_VLR.spr  Get_Password_MSC.smc  Get_Password_VLR.smc  Interrogate_SS_HLR.spr  Interrogate_SS_VLR.spr  Invoke_SS_MSC.spr  MS_INIT_USSD_gsmSCF_Secondary_HLR.spr  MS_Init_USSD_HLR.spr  MS_Init_USSD_MSC.spr  MS_Init_USSD_VLR.spr  NI_USSD_gsmSCF_Secondary_HLR.spr  NW_Init_USSD_HLR.spr  NW_Init_USSD_MSC.spr  NW_Init_USSD_VLR.spr  Note_SS_Invocation_gsmSCF.spr  Notify_SS_Invocation_MSC.spr  Register_CC_Entry_HLR.spr  Register_CC_Entry_VLR.spr  Register_Password_HLR.spr  Register_SS_HLR.spr  Register_SS_MSC.spr  Register_SS_VLR.spr  SS_Coordinator_HLR.spr  SS_Coordinator_MSC.spr  Start_USSD_HLR.smc  Start_USSD_VLR.smc  sdt.ini
doc/29002-630-24A-SDL/: .sdtfiles  29002-630-24A.sdt  29002-630-24A.sdt.state  ATI_GMLC.spr  ATI_HLR.spr  ATI_To_GMLC_gsmSCF.spr  ATI_To_HLR_gsmSCF.spr  ATM_HLR.spr  ATM_gsmSCF.spr  ATSI_HLR.spr  ATSI_gsmSCF.spr  Co_ATIH_HLR.spr  NSDC_HLR.spr  NSDC_gsmSCF.spr
doc/29002-630-24B-SDL/: .sdtfiles  29002-630-24B.sdt  29002-630-24B.sdt.state  PSL_GMLC.spr  PSL_MSC.spr  PSL_SGSN.spr  SLR_GMLC.spr  SLR_MSC.spr  SLR_SGSN.spr  SRI_LCS_GMLC.spr  SRI_LCS_HLR.spr
doc/29002-630-25-SDL/: .sdtfiles  29002-630-25.sdt  29002-630-25.sdt.state  Activate_Tracing_SGSN.smc  Activate_Tracing_VLR.smc  Alert_SC_HLR.spr  Alert_Service_Centre_HLR.smc  Authenticate_MSC.smc  Authenticate_VLR.smc  Check_Available_Vectors.spd  Check_Confirmation.smc  Check_IMEI_EIR.spr  Check_IMEI_MSC.smc  Check_IMEI_SGSN.spr  Check_IMEI_VLR.smc  Check_Indication.smc  Check_Reference.smc  Control_Tracing_With_SGSN_HLR.smc  Control_Tracing_With_VLR_HLR.smc  Insert_GPRS_Subs_Data_Stand_Alone_HLR.spr  Insert_Subs_Data_SGSN.smc  Insert_Subs_Data_Stand_Alone_HLR.spr  Insert_Subs_Data_VLR.smc  Insert_VCSG_Subs_Data_Stand_Alone_CSS.spr  Note_Authentication_Failure_HLR.spr  Obtain_Auth_Params_VLR.smc  Obtain_Auth_Sets_HLR.spr  Obtain_Auth_Sets_SGSN.spr  Obtain_Auth_Sets_VLR.spr  Obtain_Authent_Params_VLR.smc  Obtain_Authent_Sets_HLR.spr  Obtain_Authent_Sets_SGSN.spr  Obtain_Authent_Sets_VLR.spr  Obtain_IMEI_MSC.smc  Obtain_IMEI_VLR.smc  Obtain_IMSI_MSC.smc  Obtain_IMSI_VLR.smc  Obtain_Identity_VLR.smc  Page_MSC.smc  Process_Access_Request_MSC.smc  (+17 more)
doc/29002-Rel15-15-SDL/: .sdtfiles  29002-730-15.sdt  29002-730-15.sdt.state  Load_Ctrl.spr  MAP_DSM.spr  MAP_Provider.sbk  MAP_Stack.ssy  Performing_MAP_SSM.spr  Process_Components.spd  Requesting_MAP_SSM.spr  sdt.ini
doc/29002-Rel15-19-SDL/: .sdtfiles  29002-Rel11-19.sdt  29002-Rel11-19.sdt.state  CSS_temporary.sli  Cancel_GPRS_Location_Child_HLR.spr  Cancel_GPRS_Location_HLR.spr  Cancel_Location_Child_HLR.spr  Cancel_Location_HLR.spr  Cancel_Location_HLR.spr.lck  Cancel_Location_SGSN.spr  Cancel_Location_SGSN.spr.lck  Cancel_Location_VLR.spr  Cancel_Location_VLR.spr.lck  Cancel_VCSG_Location_CSS.spr  Cancel_VCSG_Location_SGSN.spr  Cancel_VCSG_Location_VLR.spr  GPRS_Location_Update_Completion_VLR.smc  GPRS_Update_HLR_VLR.smc  GPRS_Update_Location_Area_VLR.spr  Handover_MSC_A.spr  Handover_MSC_B.spr  Handover_VLR_B.spr  Insert_GPRS_Subs_Data_Framed_HLR.smc  Insert_Subs_Data_Framed_HLR.smc  Insert_VCSG_Subs_Data_Framed_CSS.smc  Location_Management_Coordinator_HLR.spr  Notify_MM_Event_VLR_Or_SGSN.spr  Notify_MM_Event_gsmSCF.spr  Purge_MS_HLR.spr  Purge_MS_HLR.spr.lck  Purge_MS_SGSN.spr  Purge_MS_VLR.spr  (+23 more)
supporting-files/: Info.plist
ulibgsmmap/: GsmCharSet.h  GsmCharSet.m  NSData+map.h  NSData+map.m  NSString+map.h  NSString+map.m  UMGSMMAP_ADD_Info.asn  UMGSMMAP_ADD_Info.h  UMGSMMAP_ADD_Info.m  UMGSMMAP_APN.asn  UMGSMMAP_APN.h  UMGSMMAP_APN.m  UMGSMMAP_ASCI_CallReference.asn  UMGSMMAP_ASCI_CallReference.h  UMGSMMAP_ASCI_CallReference.m  UMGSMMAP_ASNTime.asn  UMGSMMAP_ASNTime.h  UMGSMMAP_ASNTime.m  UMGSMMAP_ASNTimeZone.h  UMGSMMAP_ASNTimeZone.m  UMGSMMAP_AUTN.asn  UMGSMMAP_AUTN.h  UMGSMMAP_AUTN.m  UMGSMMAP_AbsentSubscriberDiagnosticSM.h  UMGSMMAP_AbsentSubscriberDiagnosticSM.m  UMGSMMAP_AbsentSubscriberParam.asn  UMGSMMAP_AbsentSubscriberParam.h  UMGSMMAP_AbsentSubscriberParam.m  UMGSMMAP_AbsentSubscriberReason.asn  UMGSMMAP_AbsentSubscriberReason.h  UMGSMMAP_AbsentSubscriberReason.m  UMGSMMAP_AbsentSubscriberSM_Param.asn  UMGSMMAP_AbsentSubscriberSM_Param.h  UMGSMMAP_AbsentSubscriberSM_Param.m  UMGSMMAP_AccessRestrictionData.asn  UMGSMMAP_AccessRestrictionData.h  UMGSMMAP_AccessRestrictionData.m  UMGSMMAP_AccuracyFulfilmentIndicator.asn  UMGSMMAP_AccuracyFulfilmentIndicator.h  UMGSMMAP_AccuracyFulfilmentIndicator.m  (+1468 more)
ulibgsmmap.xcodeproj/: project.pbxproj  project.pbxproj.bck
ulibgsmmapTests/: ulibgsmmapTests.m
(+1388 files in other folders)
